--- a/css/mobile-menu.css
+++ b/css/mobile-menu.css
@@ -28,6 +28,7 @@
         padding: 0;
         margin: 0;
         width: 100%;
+        padding-left: 0 !important;
     }
     
     .nav-menu-links li {
